--- a/src/personal/style.css
+++ b/src/personal/style.css
@@ -163,25 +163,16 @@
 }
 .gloryIcon{
   box-sizing: border-box;
-  display:-webkit-box;
-  -webkit-box-align:center;
-  -webkit-box-pack:center;
-  display: flex;
-  align-items: center;
-  justify-content:center;
-  display:table;
-  margin: 0 auto;
-  margin-top: 5px;
-  margin-bottom: 28px;
+  margin-top: 8px;
+  overflow: hidden;
 }
 .gloryIcon li{
-  display: table-cell;
-  width:62px;
-  text-align:center;
+  float: left;
   font-size:12px;
   color:rgba(136,136,136,1);
   line-height:16px;
   cursor:pointer;
+  margin-right: 10px;
 }
 .gloryIcon li:hover{
   cursor:pointer;
