--- a/src/search/style.css
+++ b/src/search/style.css
@@ -17,6 +17,13 @@
   cursor: pointer;
   display: inline-block;
   margin-left:14px;
+  text-align: center;
+}
+.searchBtn i{
+  font-size: 20px;
+  font-weight: 700;
+  color: #878b94;
+  vertical-align: middle;
 }
 .searchBtn >i:hover {
   color:#2D3F5D;
@@ -37,10 +44,10 @@
   height: 100%;
   padding: 0 10px;
   font-size: 12px;
-  /* color: #333; */
   color: rgba(71,77,84,1);
   background: transparent;
   border:0 none;
+  outline: none;
 }
 .searchText::-webkit-input-placeholder{color:#ccc!important}
 .searchText::-moz-placeholder{color:#ccc!important}
