--- a/src/search/style.css
+++ b/src/search/style.css
@@ -123,35 +123,35 @@
    overflow: auto;
    position: relative;
 }
-.SearchWin .searchContent .searchWindom:last-child{
-  padding-bottom:45px;
-}
 .SearchWin .searchWindom{
   float: left;
   width: 300px;
   margin-top: 21px;
-  /* padding:0 0 45px 26px; */
   padding-left:25px;
-  text-align: left;}
-.SearchWin .searchWindom>h3 {font-size:14px;
-    font-family:'MicrosoftYaHei';
-    color:rgba(71,77,84,1);
-    line-height:19px;}
+  text-align: left;
+}
+.SearchWin .searchContent .searchWindom:last-child{
+  padding-bottom:30px;
+}
+.SearchWin .searchWindom>h3 {
+  font-size:14px;
+  font-family:'MicrosoftYaHei';
+  color:rgba(71,77,84,1);
+  line-height:19px;
+}
 .SearchWin .searchWindom>ul>li {
-  float: left;
   width: 100%;
   margin-top: 10px;
-  cursor: pointer
 }
 .SearchWin .searchBtnAll {background: #fff; cursor: pointer; line-height: 39px;color: #007ACE; font-size: 12px; text-align: center; position: absolute;bottom:0;width: 100%;height: 39px;}
 .SearchWin .searchBtnAll:hover{ background: #EFF0F2; color: #474D54}
 
 .SearchWin em{
   width: 100%;
-    text-align: center;
-    float: left;
-    font-size: 12px;
-    color: #666;
-    font-style: normal;
-    margin-top: 30px;
+  text-align: center;
+  float: left;
+  font-size: 12px;
+  color: #666;
+  font-style: normal;
+  margin-top: 30px;
 }
